# XLog

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/threshold/xlog/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.c
app/src/main/cpp/xlog/: xlog.c  xlog.h
app/src/test/java/com/threshold/xlog/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
